<resources>
    <string name="ok">
        OK
    </string>
    <string name="cancel">
        Cancel
    </string>
    <string name="yes">
        Yes
    </string>
    <string name="no">
        No
    </string>
    <string name="continue_word">
        Continue
    </string>
    <string name="retry">
        Retry
    </string>
    <string name="none">
        None
    </string>
    <string name="home">
        Home
        
    </string>
    <string name="save">
        Save
    </string>
    <string name="delete">
        Delete
    </string>
    <string name="delete_q">
        Delete?
    </string>
    <string name="delete_all">
        Delete All
    </string>
    <string name="select">
        Select
    </string>
    <string name="please">
        Please
    </string>
    <string name="return_word">
        Return
    </string>
    <string name="next">
        Next
    </string>
    <string name="back">
        Back
        
    </string>
    <string name="forward">
        Forward
        
    </string>
    <string name="warning">
        Warning
    </string>
    <string name="error">
        Error
    </string>
    <string name="correct">
        Correct
    </string>
    <string name="open">
        Open
    </string>
    <string name="close">
        Close
    </string>
    <string name="camera">
        Camera
    </string>
    <string name="gallery">
        Gallery
    </string>
    <string name="defined">
        Defined
    </string>
    <string name="undefined">
        Undefined
    </string>
    <string name="language">
    	English
    </string>
    <string name="expiration_date_1st_part">
        Omitted
    </string>
    <string name="ome_number">
        Omitted
    </string>
    <string name="omb_notice">
        Omitted
    </string>
    <string name="omb_submission">
        Omitted
    </string>
    <string name="omb_text1">
        Omitted
    </string>
    <string name="omb_text2">
        Omitted
    </string>
    <string name="omb_sub">
        I have read this and agree
    </string>
    <string name="i_refuse">
        I decline
    </string>
    <string name="welcome">
        Welcome
    </string>
    <string name="username">
        Username
    </string>
    <string name="password">
        Password
    </string>
    <string name="login">
        Login
    </string>
    <string name="logout">
        Logout
    </string>
    <string name="login_or_logout">
        Login/Logout
    </string>
    <string name="guest">
        Guest
    </string>
    <string name="login_was_successful">
        Login was successful
    </string>
    <string name="good_bye">
        Good bye
    </string>
    <string name="you_are_now_a_developer">
        You are now a developer!
    </string>
    <string name="web_server">
        Web Server
    </string>
    <string name="server_status">
        Server Status
        
    </string>
    <string name="check">
        Check
    </string>
    <string name="latency">
        Latency
        
    </string>
    <string name="time_out">
        Time out
    </string>
    <string name="event">
        Event
    </string>
    <string name="change">
        Change
    </string>
    <string name="date">
        Date
    </string>
    <string name="event_location">
        Event Location
    </string>
    <string name="find">
        Find
        
    </string>
    <string name="report">
        Report
        
    </string>
    <string name="organize">
        Organize
        
    </string>
    <string name="do_you_want_to_login">
        Do you want to login?
    </string>
    <string name="do_you_want_to_login_dis">
        As a guest, you may have some limited functions to use. To login is highly suggested.
    </string>
    <string name="filter">
        Filter
        
    </string>
    <string name="name">
        Name
        
    </string>
    <string name="photo">
        Photo
        
    </string>
    <string name="page">
        Page
    </string>
    <string name="search">
        Search
    </string>
    <string name="more">
        More
        
    </string>
    <string name="draft">
        Draft
        
    </string>
    <string name="send">
        Send
        
    </string>
    <string name="primary_image">
        Primary Image
        
    </string>
    <string name="secondary_image">
        Secondary Image
        
    </string>
    <string name="press_button_on_right_side_to_add_caption">
        Press button on right side to add caption
        
    </string>
    <string name="caption">
        Caption
    </string>
    <string name="missing_person_information">
        Missing Person Information
    </string>
    <string name="first_name">
        First Name
    </string>
    <string name="last_name">
        Last Name
    </string>
    <string name="other_names">
        Other Names
    </string>
    <string name="approximate_age">
        Age
    </string>
    <string name="gender">
        Gender
    </string>
    <string name="male">
        Male
    </string>
    <string name="female">
        Female
    </string>
    <string name="unknown">
        Unknown
    </string>
    <string name="complex">
        Complex
    </string>
    <string name="status">
        Status
        
    </string>
    <string name="missing">
        Missing
    </string>
    <string name="alive_and_well">
        Alive and Well
    </string>
    <string name="injured">
        Injured
    </string>
    <string name="deceased">
        Deceased
    </string>
    <string name="found">
        Found
    </string>
    <string name="last_seen_location">
        Last Seen Location
    </string>
    <string name="additional_details">
        Additional Details
    </string>
    <string name="missing_person_uuid">
        Missing Person UUID
    </string>
    <string name="last_updated_date">
        Last Updated Date
    </string>
    <string name="follow">
        Follow
    </string>
    <string name="why_follow_a_record">
        Why follow a record?
    </string>
    <string name="follow_record_des">
        To receive email alert when this record is updated with new information, you can select to
        follow this person. You will only receive an email when the record is updated with new
        information or when someone leaves a comment.
    </string>
    <string name="why_follow_record">
        To receive email alerts when this record is updated with new information, you can elect to
        follow this person. You will only receive an email when the record is updated with new
        information or when someone leaves a comment.
    </string>
    <string name="input_by_right_side_button">
        Input by right side button
    </string>
    <string name="google_map_view">
        Google Map View
    </string>
    <string name="gps_cannot_detect_current_location">
        GPS cannot detect current location
    </string>
    <string name="let_gps_fill_your_address">
        Let GPS fill your address
    </string>
    <string name="get_address_from_google_map">
        Get address from Google Map
    </string>
    <string name="address_book_is_empty">
        Address book is empty
    </string>
    <string name="select_from_adress_book">
        Select from address book
    </string>
    <string name="street">
        Street
    </string>
    <string name="city">
        City
    </string>
    <string name="state">
        State
    </string>
    <string name="zip">
        Zip
    </string>
    <string name="country">
        Country
    </string>
    <string name="comments">
        Comments
    </string>
    <string name="maximum_500_characters">
        Maximum 500 characters
    </string>
    <string name="required_field">
        Required field
        
    </string>
    <string name="lost_person_files">
        Lost Person Files
    </string>
    <string name="file_found">
        file found
    </string>
    <string name="files_found">
        files found
    </string>
    <string name="no_file_is_found">
        No file is found
    </string>
    <string name="excellent">
        Excellent
    </string>
    <string name="good">
        Good
    </string>
    <string name="poor">
        Poor
    </string>
    <string name="disconnected">
        Disconnected
    </string>
    <string name="this_option_is_not_available">
        This option is not available
    </string>
    <string name="all_photos_are_deleted">
        All photos are deleted
    </string>
    <string name="email">
        Email
    </string>
    <string name="no_photo">
        No photo
    </string>
    <string name="social_media">
        Social Media
    </string>
    <string name="tutorials">
        Tutorials
    </string>
    <string name="email_us">
        Email Us
    </string>
    <string name="version_history">
        Version History
    </string>
    <string name="clean_cache">
        Clean Cache
    </string>
    <string name="developer_tools">
        Developer Tools
    </string>
    <string name="about">
        About
    </string>
    <string name="get_male_name">
        Get Male Name
    </string>
    <string name="get_female_name">
        Get Female Name
    </string>
    <string name="notification">
        Notification
    </string>
    <string name="show_omb">
        Show OMB
    </string>
    <string name="future_developments">
        Future Developments
    </string>
    <string name="display_gcm_token">
        Display GCM Token
    </string>
    <string name="gcm_token_upload_status">
        GCM Token Upload Status
    </string>
    <string name="send_gcm_message">
        Send GCM Message
    </string>
    <string name="email_gcm_token">
        Email GCM Token
    </string>
    <string name="select_web_server">
        Select Web Server
    </string>
    <string name="follow_record">
        Follow Record
    </string>
    <string name="show_password">
        Show password
    </string>
    <string name="forgot_password">
        Forgot password
    </string>
    <string name="submit">
        Submit
    </string>
    <string name="forgot_your_password_q">
        Forgot your password? Please enter your e-mail address, we will send information back to you shortly
    </string>
    <string name="register_as_a_new_user">
        Register as a new user
    </string>
    <string name="adult_18_plus">
        Adult (18+)
    </string>
    <string name="view_persons_with">
        View persons with
    </string>
    <string name="photo_only">
        photo only
    </string>
    <string name="both_recommended">
        both - recommended
    </string>
    <string name="number_of_records_per_load">
        Number of records per load
    </string>
    <string name="_5_seconds">
        5
    </string>
    <string name="_10_seconds_recommended">
        10 - recommended
    </string>
    <string name="_15_seconds">
        15
    </string>
    <string name="_20_seconds">
        20
    </string>
    <string name="change_password">
        Change Password
    </string>
    <string name="menu_settings">
        Settings
    </string>
    <string name="enter_email">
        Enter email
    </string>
    <string name="enter_password">
        Enter password
    </string>
    <string name="age_child_pius_unknown">
        Child (0-17) + Unknown
        
    </string>
    <string name="pushNotification">
    	Push Notification
        
    </string>
    <string name="person">
    	Person
    </string>
    <string name="animal">
        Animal
    </string>
</resources>