<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text= "@string/email"
                android:textAppearance="?android:attr/textAppearanceSmall" />

 	        <EditText
    	        android:id="@+id/editUsername"
        	    android:layout_width="match_parent"
            	android:layout_height="@dimen/reunite_button_height"
            	android:ems="10"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress">
                <requestFocus />
        	</EditText>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/reunite_button_height"
                android:ems="10"
                android:hint="@string/enter_password"
                android:inputType="textPassword" />

            <CheckBox
                android:id="@+id/ckShow"
                android:layout_width="match_parent"
                android:layout_height="@dimen/reunite_button_height"
                android:text="@string/show_password" />

            <Button
                android:id="@+id/buEnter"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/com_facebook_blue"
                android:text="@string/login"
                android:textColor="@color/white1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical" >

            <Button
                android:id="@+id/buForgotUsername"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/com_facebook_blue"
                android:textColor="@color/white1"
                android:layout_margin="10dp"
                android:text="@string/forgot_password" />

            <Button
                android:id="@+id/buRegister"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_as_a_new_user"
                android:textColor="@color/white1"
                android:layout_margin="10dp"
                android:background="@color/com_facebook_blue" />

        </LinearLayout>
        </LinearLayout>

</LinearLayout>