<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_your_password_q" />

    <EditText
        android:id="@+id/editEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="@dimen/reunite_button_height_48"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttonSendUsername"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="@dimen/reunite_button_height_48"
        android:background="@color/com_facebook_blue"
        android:text="@string/submit"
        android:textColor="@color/white1"/>

</LinearLayout>
